unpackaged/main/default/objects/Quote_Review_Request__c/Quote_Review_Request__c.object-meta.xml
<CustomObject>
    <label>Quote Review Request</label>
    <nameField>
        <displayFormat>QR-{0000000}</displayFormat>
        <label>Quote Review Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Review Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>