unpackaged/main/default/objects/Quote_Review_Request__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <formula>IF(
    OR(
    TEXT(Status__c) = &#39;Requested&#39;,
    TEXT(Status__c) = &#39;In Progress&#39;,
    TEXT(Status__c) = &#39;Rejected&#39;
    ),
    HYPERLINK( &quot;/apex/SubmitQuote_Review_Request?&amp;Id=&quot; &amp; Id, &#39;Submit for Approval&#39;, &quot;_self&quot;),
    NULL
)</formula>
    <label>Actions</label>
    <type>Text</type>
</CustomField>