unpackaged/main/default/objects/Quote_Review_Request__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <formula>Quote__r.Agency__r.Name</formula>
    <label>Agency</label>
    <type>Text</type>
</CustomField>