unpackaged/main/default/objects/Quote_Review_Request__c/fields/Average_Multiplier_Variance__c.field-meta.xml
<CustomField>
    <fullName>Average_Multiplier_Variance__c</fullName>
    <formula>CASE( Pricing_Division__c ,
&#39;CRC&#39; , NULL,
&#39;ALFITT&#39; , NULL,
&#39;STEELCON / ECN&#39; , NULL,
&#39;AFC&#39; , NULL,
&#39;MTLFRM&#39;, NULL,
&#39;PPC&#39;,  Quote__r.PPC_Average_Multiplier_Variance__c ,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Multiplier Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>