unpackaged/main/default/objects/Quote_Review_Request__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>Quote__r.Account_Name__c</formula>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>