unpackaged/main/default/objects/Quote_Review_Request__c/fields/DEP_Pricing_Division__c.field-meta.xml
<CustomField>
    <fullName>DEP_Pricing_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEP_Pricing Division</label>
    <referenceTo>Pricing_Division__c</referenceTo>
    <relationshipLabel>Quote Review Requests</relationshipLabel>
    <relationshipName>Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>