unpackaged/main/default/objects/Quote_Review_Request__c/fields/Effective_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_Completed_Date_Time__c</fullName>
    <formula>IF(
TIMEVALUE(MID(TEXT(Completed_Date_Time__c),12,8) &amp; &quot;.000&quot;) &lt; TIMEVALUE(&#39;13:00:00.000&#39;),
DATETIMEVALUE( LEFT(TEXT(Completed_Date_Time__c),10) &amp; &#39; 13:00:00&#39;),
Completed_Date_Time__c
)</formula>
    <label>Effective Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>