unpackaged/main/default/objects/Quote_Review_Request__c/fields/Effective_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_Created_Date_Time__c</fullName>
    <formula>IF(
TIMEVALUE(MID(TEXT(CreatedDate),12,8) &amp; &quot;.000&quot;) &lt; TIMEVALUE(&#39;13:00:00.000&#39;),
DATETIMEVALUE( LEFT(TEXT(CreatedDate),10) &amp; &#39; 13:00:00&#39;),
CreatedDate
)</formula>
    <label>Effective Created Date/Time</label>
    <type>DateTime</type>
</CustomField>