unpackaged/main/default/objects/Quote_Review_Request__c/fields/fmla_Cable_Manage_Quoted_Total__c.field-meta.xml
<CustomField>
    <fullName>fmla_Cable_Manage_Quoted_Total__c</fullName>
    <formula>Quote__r.Gross_Invoice_Cable_Manage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quoted Total for Cable Management Products</inlineHelpText>
    <label>Cable Management Quoted Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>