unpackaged/main/default/objects/Quote_Review_Request__c/fields/fmla_Cable_Manage_Requires_Approval__c.field-meta.xml
<CustomField>
    <fullName>fmla_Cable_Manage_Requires_Approval__c</fullName>
    <formula>Quote__r.Cable_Manage_QLs_Needing_Approval__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Are There Any Cable Management Quote Lines Below Approval Threshold?</inlineHelpText>
    <label>Cable Manage Requires Approval</label>
    <type>Checkbox</type>
</CustomField>