unpackaged/main/default/objects/Quote_Review_Request__c/fields/fmla_Min_Multiplier_FRE__c.field-meta.xml
<CustomField>
    <fullName>fmla_Min_Multiplier_FRE__c</fullName>
    <formula>Quote__r.Min_FRE_Multiplier__c</formula>
    <label>Min. Multiplier FRE</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>