unpackaged/main/default/objects/Quote_Review_Request__c/fields/Link_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Quote__c</fullName>
    <formula>&quot;https://atkore.lightning.force.com/lightning/r/SBQQ__Quote__c/&quot; &amp; Quote__c &amp; &quot;/view&quot;</formula>
    <label>Link to Quote</label>
    <type>Text</type>
</CustomField>