unpackaged/main/default/objects/Quote_Review_Request__c/fields/Margin_pct__c.field-meta.xml
<CustomField>
    <fullName>Margin_pct__c</fullName>
    <formula>CASE( Pricing_Division__c ,
&#39;CRC&#39; , Quote__r.Margin_Aluminum_Conduit_Fittings_Per__c,
&#39;ALFITT&#39; , Quote__r.Margin_Conduit_Cable_Fittings__c,
&#39;STEELCON / ECN&#39; , Quote__r.Margin_Steel_Conduit_ECN__c,
&#39;AFC&#39; , Quote__r.Margin_ElectricalCableFlexConduit__c,
&#39;MTLFRM&#39;, Quote__r.Margin_Metal_Framing__c,
&#39;PPC&#39;, Quote__r.Margin_Plastic_Pipe_Conduit__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>