unpackaged/main/default/objects/Quote_Review_Request__c/fields/Margin_PVC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Margin_PVC_Fittings__c</fullName>
    <formula>IF(
   Quote__r.Margin_PVC_Fittings__c = 0,
   NULL,
   Quote__r.Margin_PVC_Fittings__c
)</formula>
    <label>Margin % (PVC Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>