unpackaged/main/default/objects/Quote_Review_Request__c/fields/Max_Multiplier_Variance__c.field-meta.xml
<CustomField>
    <fullName>Max_Multiplier_Variance__c</fullName>
    <formula>CASE( Pricing_Division__c ,
&#39;CRC&#39; , NULL,
&#39;ALFITT&#39; , NULL,
&#39;STEELCON / ECN&#39; , NULL,
&#39;AFC&#39; , Quote__r.ECFC_Max_Multiplier_Variance__c,
&#39;MTLFRM&#39;, NULL,
&#39;PPC&#39;, NULL,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Multiplier Variance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>