unpackaged/main/default/objects/Quote_Review_Request__c/fields/Max_Price_Variance_PVCCON__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_Variance_PVCCON__c</fullName>
    <formula>Quote__r.Max_Price_Variance_PVCCON__c</formula>
    <label>Max Price Variance % (PVCCON)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>