unpackaged/main/default/objects/Quote_Review_Request__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>Quote__r.SBQQ__Opportunity2__r.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>