unpackaged/main/default/objects/Quote_Review_Request__c/fields/Pricing_Division__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Division__c</fullName>
    <label>Pricing Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>