unpackaged/main/default/objects/Quote_Review_Request__c/fields/Pricing_Justification__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Justification__c</fullName>
    <label>Pricing Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>