unpackaged/main/default/objects/Quote_Review_Request__c/fields/Raw_Margin__c.field-meta.xml
<CustomField>
    <fullName>Raw_Margin__c</fullName>
    <formula>CASE( Pricing_Division__c ,
  &#39;CRC&#39; , NULL,
  &#39;ALFITT&#39; , Quote__r.Raw_Margin_Conduit_Cable_Fittings__c ,
  &#39;STEELCON / ECN&#39; , NULL,
  &#39;AFC&#39; , NULL,
  &#39;MTLFRM&#39;, NULL,
  &#39;PPC&#39;, NULL,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Raw Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>