unpackaged/main/default/objects/Quote_Review_Request__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>CASE( Pricing_Division__c ,
  &#39;AFC&#39;, &#39;ECFC&#39;,
  &#39;ALFITT&#39;, &#39;Conduit &amp; Cable Fittings&#39;,
  &#39;CRC&#39;, &#39;Aluminum Conduit &amp; Fittings&#39;,
  &#39;MTLFRM&#39;, &#39;Metal Framing&#39;,
  &#39;PPC&#39;, &#39;PVC Conduit &amp; Fittings&#39;,
  &#39;STEELCON / ECN&#39;, &#39;Steel Conduit &amp; ECN&#39;,
Pricing_Division__c
)</formula>
    <label>SBU</label>
    <type>Text</type>
</CustomField>