unpackaged/main/default/objects/Quote_Review_Request__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>