unpackaged/main/default/objects/Quote_Review_Request__c/fields/SubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>SubmittedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Review_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>