unpackaged/main/default/objects/Quote_Review_Request__c/fields/Total_Weight_Steel_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Steel_Conduit__c</fullName>
    <formula>Quote__r.Total_Weight_Steel_Conduit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight (Steel Conduit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>