unpackaged/main/default/objects/Quote_Review_Request__c/fields/Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Time__c</fullName>
    <formula>IF(
ISBLANK(Completed_Date_Time__c),
NULL,

ROUND( 9 * (
   ( 5 * FLOOR( ( DATEVALUE( Effective_Completed_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( Effective_Completed_Date_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 9 * ( MOD( Effective_Completed_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Effective_Created_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( Effective_Created_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 9 * ( MOD( Effective_Created_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
2 )
)</formula>
    <label>Turnaround Time (bus hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>