unpackaged/main/default/objects/Quote_Review_Request__c/fields/User_DOA_Authority__c.field-meta.xml
<CustomField>
    <fullName>User_DOA_Authority__c</fullName>
    <formula>$User.User_DOA_Authority__c</formula>
    <label>User DOA Authority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>