unpackaged/main/default/objects/Quote_Review_Request__c/fields/User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>User_is_Owner__c</fullName>
    <formula>IF(
  $User.Id = OwnerId,
  TRUE,
  FALSE
)</formula>
    <label>User is Owner</label>
    <type>Checkbox</type>
</CustomField>