unpackaged/main/default/objects/Quote_Review_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Agency__c</columns>
    <columns>Pricing_Division__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Actions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>