unpackaged/main/default/objects/Quote_Review_Request__c/listViews/FRE_Approval_Requests.listView-meta.xml
<ListView>
    <fullName>FRE_Approval_Requests</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Agency__c</columns>
    <columns>Pricing_Division__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Actions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pricing_Division__c</field>
        <operation>equals</operation>
        <value>FRE</value>
    </filters>
    <label>FRE</label>
</ListView>