unpackaged/main/default/objects/Quote_Review_Request__c/listViews/Steel.listView-meta.xml
<ListView>
    <fullName>Steel</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Agency__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Pricing_Division__c</columns>
    <columns>Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Actions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Pricing_Division__c</field>
        <operation>equals</operation>
        <value>STEELCON / ECN</value>
    </filters>
    <label>Steel</label>
</ListView>